[package]
name = "mqtt-blink1"
description = "Controls a Blink1 device via MQTT"
authors = ["Steffen Uhlig <steffen@familie-uhlig.net>"]
repository = "https://github.com/uhlig-it/mqtt-blink1"
version = "0.1.0"
edition = "2021"

[package.metadata.wix]
upgrade-guid = "8CAC0DC0-2301-4DC8-ADFB-447692C64401"
path-guid = "E043846A-6044-4ADC-A176-29A9C0046EB6"
license = false
eula = false

[dependencies]
blinkrs = "2.0.1"
clap = { version = "4.4.16", features = ["derive"] }
paho-mqtt = "0.12.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.111"
signal-hook = "0.3.17"
url = "2.5.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.7.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "homebrew", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
